Refines post styles.

--- a/src/components/MathBlock.module.scss
+++ b/src/components/MathBlock.module.scss
@@ -5,6 +5,7 @@
     margin-bottom: 3.4rem;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
+    margin-top: 0;
     -ms-overflow-style: none;
     overflow-x: scroll;
     padding: 2.1rem;
