--- a/src/components/Blockquote.module.scss
+++ b/src/components/Blockquote.module.scss
@@ -9,6 +9,7 @@
     margin-bottom: 3.4rem;
     margin-left: 0;
     margin-right: 0;
+    margin-top: 0;
     padding: 0;
     padding-bottom: 2.1rem;
     padding-left: 3.4rem;
