--- a/src/components/CodeBlock.module.scss
+++ b/src/components/CodeBlock.module.scss
@@ -5,6 +5,7 @@
     margin-bottom: 3.4rem;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
+    margin-top: 0;
 }
 
 .preFormattedCodeBlock {
@@ -16,6 +17,7 @@
     margin-bottom: 3.4rem;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
+    margin-top: 0;
     padding: 0;
 
     .pathLabel {
