Fixes Image and Picture styles.

--- a/src/components/Picture.module.scss
+++ b/src/components/Picture.module.scss
@@ -1,7 +1,9 @@
 .picture {
     display: block;
+    margin-bottom: 3.4rem;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
+    margin-top: 0;
     width: calc(100% + 2.1rem * 2);
 
     img {
