--- a/src/components/Footnotes.module.scss
+++ b/src/components/Footnotes.module.scss
@@ -25,8 +25,8 @@
                 color: $color-content-footer-text;
                 display: flex;
                 flex-direction: row;
-                font-size: calc(15em / 17);
-                line-height: call(29 / 15);
+                font-size: calc(13em / 15);
+                line-height: call(29 / 13);
                 margin-bottom: 2.1rem;
                 margin-top: 0;
 
@@ -36,8 +36,9 @@
 
                 .footnoteLabel {
                     font-family: $font-text-monospaced;
-                    font-weight: 500;
+                    font-weight: 400;
                     margin-bottom: -0.9rem;
+                    margin-right: 0.8rem;
                     margin-top: -0.8rem;
 
                     &::before {
