--- a/src/components/InlineCode.module.scss
+++ b/src/components/InlineCode.module.scss
@@ -1,17 +1,28 @@
 @import '../styles/fonts';
 @import '../styles/colors';
 
-.inlineCode {
+.inlineCodeWrapper {
+    align-items: baseline;
     background-color: $color-content-code-block-background;
     border-left: solid 2px $color-content-code-block-indicator;
     border-right: solid 2px $color-content-code-block-indicator;
+    display: inline-flex;
+    flex-direction: row;
+    padding-bottom: 0.1rem;
+    padding-top: 0.1rem;
+}
+
+.inlineCode {
     display: inline;
     font-family: $font-text-monospaced;
-    font-size: 0.76em;
+    font-size: calc(13em / 17);
     font-weight: 400;
-    line-height: 2.23;
+    line-height: calc(29 / 13);
+    margin-bottom: -0.6rem;
     margin-left: 0.3rem;
     margin-right: 0.3rem;
+    margin-top: -0.6rem;
+    padding: 0;
     padding-left: 0.3rem;
     padding-right: 0.3rem;
     word-break: break-all;
