--- a/src/components/TableData.module.scss
+++ b/src/components/TableData.module.scss
@@ -1,7 +1,12 @@
 .tableData {
-    padding-bottom: calc(1.7rem - 0.8rem);
-    padding-left: 3.4rem;
-    padding-top: calc(1.5rem - 0.8rem);
+    padding-bottom: 2.1rem;
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
+    padding-top: 2.1rem;
+
+    &:first-child {
+        padding-left: 3.4rem;
+    }
 
     &:last-child {
         padding-right: 3.4rem;
