--- a/src/components/ListItem.module.scss
+++ b/src/components/ListItem.module.scss
@@ -7,7 +7,10 @@
     flex-direction: row;
     line-height: calc(29 / 17);
     margin: 0;
+    margin-bottom: 3.4rem;
+}
 
+.listItem .listItem {
     &:last-child {
         margin-bottom: 0;
     }
@@ -47,26 +50,5 @@
 
     &::before {
         content: none;
-    }
-}
-
-.contentContainer {
-    align-items: stretch;
-    display: flex;
-    flex-direction: column;
-
-    .paragraphWrapper {
-        align-items: stretch;
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        margin-bottom: 3.4rem;
-
-        .paragraph {
-            display: block;
-            margin: 0;
-            margin-bottom: -1rem;
-            margin-top: -1.1rem;
-        }
     }
 }
