--- a/src/components/CodeBlock.module.scss
+++ b/src/components/CodeBlock.module.scss
@@ -2,6 +2,9 @@
 @import '../styles/colors';
 
 .liveCode {
+    align-items: flex-end;
+    display: flex;
+    flex-direction: column;
     margin-bottom: 3.4rem;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
@@ -13,7 +16,6 @@
     background-color: $color-content-code-block-background;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     margin-bottom: 3.4rem;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
@@ -25,7 +27,7 @@
         color: $color-content-body;
         display: block;
         font-family: $font-text-monospaced;
-        font-size: calc(13em / 17);
+        font-size: 1.3em;
         font-weight: 400;
         line-height: 1;
         margin: 0;
@@ -45,7 +47,7 @@
         border-bottom-right-radius: 0.7rem;
         display: block;
         font-family: $font-text-monospaced;
-        font-size: calc(11em / 17);
+        font-size: 1.1em;
         font-weight: 400;
         line-height: 1;
         margin-bottom: 0.6rem;
@@ -67,7 +69,7 @@
         align-self: flex-start;
         display: flex;
         font-family: $font-text-monospaced;
-        font-size: calc(13em / 17);
+        font-size: 1.3em;
         font-weight: 400;
         line-height: calc(26 / 13);
         padding-bottom: 2.4rem;
