--- a/src/components/ListItem.module.scss
+++ b/src/components/ListItem.module.scss
@@ -25,9 +25,10 @@
         counter-increment: ordered-list;
         display: inline-block;
         font-family: $font-text-monospaced;
-        font-size: 0.88em;
-        margin-bottom: -1rem;
-        margin-top: -1.1rem;
+        font-size: 1.7em;
+        line-height: calc(29 / 17);
+        margin-bottom: -1.1rem;
+        margin-top: -1.2rem;
         padding-right: 1.3rem;
     }
 }
@@ -39,6 +40,9 @@
         color: $color-content-list-indicator-light;
         content: "\2022";
         display: inline-block;
+        font-family: $font-text-serif;
+        font-size: 1.7em;
+        line-height: calc(29 / 17);
         margin-bottom: -1rem;
         margin-top: -1.1rem;
         padding-right: 1.3rem;
