--- a/src/components/SegmentSeparator.module.scss
+++ b/src/components/SegmentSeparator.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/colors';
+@import '../styles/fonts';
 
 .separator {
     border: 0;
@@ -10,10 +11,11 @@
         color: $color-content-divider;
         content: ". . .";
         display: inline-block;
-        font-size: 1.65em;
+        font-family: $font-text-serif;
+        font-size: 2.8em;
         font-weight: 600;
         margin: auto;
         position: relative;
-        top: -2.8rem;
+        top: -1.4rem;
     }
 }
