--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -1,7 +1,7 @@
 @import '../styles/colors';
 @import '../styles/fonts';
 
-.tableWrapper {
+.wrapper {
     -ms-overflow-style: none;
     overflow-x: scroll;
     width: 100%;
@@ -9,8 +9,6 @@
 
     .table {
         border-collapse: collapse;
-        font-family: $font-text-sans;
-        font-size: calc(15em / 17);
         margin-left: auto;
         margin-right: auto;
         width: 100%;
