--- a/src/templates/Page.module.scss
+++ b/src/templates/Page.module.scss
@@ -2,7 +2,18 @@
 @import '../styles/colors';
 
 .header {
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
     margin-bottom: 5.5rem;
+
+    .metadata {
+        align-self: baseline;
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+        margin-top: 2.1rem;
+    }
 }
 
 .main {
