--- a/src/templates/Post.module.scss
+++ b/src/templates/Post.module.scss
@@ -6,6 +6,14 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 5.5rem;
+
+    .metadata {
+        align-self: baseline;
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+        margin-top: 2.1rem;
+    }
 }
 
 .main {
