--- a/src/templates/Taxonomies.module.scss
+++ b/src/templates/Taxonomies.module.scss
@@ -1,3 +1,10 @@
+.header {
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2.1rem;
+}
+
 @mixin index-item {
     align-items: stretch;
     display: flex;
@@ -5,7 +12,7 @@
     margin-bottom: 5.5rem;
 }
 
-.categorySummary {
+.taxonomySummary {
     @include index-item;
 }
 
