--- a/src/components/Blockquote.module.scss
+++ b/src/components/Blockquote.module.scss
@@ -15,6 +15,12 @@
     padding-left: 3.4rem;
     padding-top: 2.1rem;
 
+    @media (max-width: 1440px) {
+        margin-left: -1.3rem;
+        margin-right: -1.3rem;
+        padding-left: 1.3rem;
+    }
+
     > :first-child {
         margin-top: 0;
     }
