--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -21,13 +21,17 @@
 .app {
     width: 100%;
 
+    @media (max-width: 1440px) {
+
+    }
+
     .navigation {
         @include container-column-stretch;
-        justify-content: stretch;
 
         background: url('../../assets/images/background-cover.jpg') no-repeat $color-ui-nav-background;
         background-size: cover;
         height: 100%;
+        justify-content: stretch;
         position: fixed;
         top: 0;
         width: 30%;
@@ -100,7 +104,7 @@
                 .slogan {
                     @include text-site-info;
 
-                    display: inline-block;
+                    display: inline;
                     font-size: 3em;
                     font-weight: 500;
                     line-height: 1.83;
@@ -113,7 +117,7 @@
                 .copyright {
                     @include text-site-info;
 
-                    display: inline-block;
+                    display: inline;
                     font-size: 1.1em;
                     font-weight: 400;
                     line-height: 1.18;
@@ -136,6 +140,10 @@
             width: 30%;
             z-index: -2;
         }
+
+        @media (max-width: 1440px) {
+            visibility: hidden;
+        }
     }
 
     .content {
@@ -149,6 +157,14 @@
         min-height: calc(100vh - 11rem);
         min-width: calc(780px - 11rem);
         width: calc(70% * 0.618 - 11rem);
+
+        @media (max-width: 1440px) {
+            margin: 2.1rem;
+            margin-top: 5.5rem;
+            margin-bottom: 5.5rem;
+            min-width: auto;
+            width: calc(100% - 2.1rem * 2);
+        }
 
         .header {
             width: 100%;
@@ -182,7 +198,7 @@
                     }
 
                     .pageInfoContent {
-                        display: inline-block;
+                        display: inline;
                         font-size: 1.1em;
                         font-weight: 400;
                         line-height: 1.18;
