--- a/src/components/MorePosts.module.scss
+++ b/src/components/MorePosts.module.scss
@@ -3,18 +3,33 @@
 .morePosts {
     align-items: stretch;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 0;
     margin-top: 0;
 
     .morePostItem {
         align-items: stretch;
         display: flex;
-        margin-bottom: 5.5rem;
-        margin-top: 3.4rem;
         flex-direction: column;
+        margin-bottom: 5.5rem;
         margin-right: 3.4rem;
+        margin-top: 3.4rem;
         min-width: calc(50% - 3.4rem);
+
+        @media (max-width: 1440px) {
+            margin: 0;
+            margin-bottom: 3.4rem;
+            min-width: auto;
+            width: 100%;
+
+            &:first-child {
+                margin-top: 3.4rem;
+            }
+
+            &:last-child {
+                margin-bottom: 5.5rem;
+            }
+        }
 
         &:last-child {
             margin-right: 0;
