--- a/src/components/PostExcerpt.module.scss
+++ b/src/components/PostExcerpt.module.scss
@@ -18,19 +18,19 @@
         margin-bottom: 2.1rem;
 
         .title {
-            display: inline-block;
+            display: inline;
             font-size: 2.4em;
             font-weight: 500;
-            line-height: 0.875;
+            line-height: calc(34 / 24);
             margin-bottom: -0.2rem;
             margin-top: -0.2rem;
         }
 
         .subtitle {
-            display: inline-block;
+            display: inline;
             font-size: 1.5em;
             font-weight: 400;
-            line-height: 1.2;
+            line-height: calc(29 / 15);
             margin-bottom: -0.3rem;
             margin-left: 0.8rem;
             margin-top: -0.4rem;
