--- a/src/components/InlineCode.module.scss
+++ b/src/components/InlineCode.module.scss
@@ -15,5 +15,5 @@
     padding: 0;
     padding-left: 0.3rem;
     padding-right: 0.3rem;
-    word-break: break-all;
+    word-break: break-word;
 }
