--- a/src/components/InlineMath.module.scss
+++ b/src/components/InlineMath.module.scss
@@ -12,7 +12,7 @@
     padding-left: 0.3rem;
     padding-right: 0.3rem;
     padding-top: 0.6rem;
-    word-break: break-all;
+    word-break: break-word;
 
     :global(.katex) {
         color: $color-content-math;
