--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,16 @@ html {
     font-weight: 300;
 }
 
+::selection {
+    background: $color-tint;
+    color: white;
+}
+
+::-moz-selection {
+    background: $color-tint;
+    color: white;
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // Building Blocks
 ////////////////////////////////////////////////////////////////////////////////
