--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -1,229 +1,37 @@
 @import '../styles/colors';
 
-@mixin container-column-stretch {
+.main {
     align-items: stretch;
     display: flex;
     flex-direction: column;
-}
-
-@mixin container-row-stretch {
-    align-items: stretch;
-    display: flex;
-    flex-direction: row;
-}
-
-@mixin text-navigation {
-    color: $color-ui-nav-headline-normal;
-    text-align: right;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-@mixin text-site-info {
-    color: $color-ui-nav-footnote;
-    text-align: right;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.app {
     width: 100%;
 
-    .navigation {
-        @include container-column-stretch;
-
-        background: url('../../assets/images/background-cover.jpg') no-repeat $color-ui-nav-background;
-        background-size: cover;
-        height: 100%;
-        justify-content: stretch;
-        position: fixed;
-        top: 0;
-        width: 30%;
-
-        @media (max-width: 1440px) {
-            visibility: hidden;
-        }
-
-        .siteTitle {
-            @include container-column-stretch;
-
-            flex-grow: 0;
-            flex-shrink: 0;
-            margin-bottom: 0;
-            margin-left: 5.5rem;
-            margin-right: 3.4rem;
-            margin-top: 3.4rem;
-
-            .siteTitleLabel {
-                @include text-navigation;
-
-                font-size: 3em;
-                font-weight: 400;
-                line-height: 1.13;
-                margin-bottom: -0.4rem;
-                margin-top: -0.8rem;
-                text-align: right;
-                text-transform: uppercase;
-            }
-        }
-
-        .navigationBar {
-            @include container-column-stretch;
-
-            flex-grow: 0;
-            flex-shrink: 0;
-            margin-bottom: 0;
-            margin-left: 5.5rem;
-            margin-right: 3.4rem;
-            margin-top: 3.4rem;
-        }
-
-        .tableOfContents {
-            @include container-column-stretch;
-
-            flex-grow: 1;
-            margin-bottom: 6.3rem;
-            margin-left: 5.5rem;
-            margin-right: 3.4rem;
-            margin-top: 3.4rem;
-        }
-
-        .siteInfo {
-            @include container-column-stretch;
-
-            bottom: 0;
-            left: 0;
-            margin-bottom: 3.4rem;
-            margin-left: 5.5rem;
-            margin-right: 3.4rem;
-            position: absolute;
-            right: 0;
-            z-index: -1;
-
-            .siteInfoItem {
-                @include container-column-stretch;
-
-                margin-bottom: 3.4rem;
-
-                &:last-child {
-                    margin-bottom: 0;
-                }
-
-                .slogan {
-                    @include text-site-info;
-
-                    display: inline;
-                    font-size: 3em;
-                    font-weight: 500;
-                    line-height: 1.83;
-                    margin: 0;
-                    margin-bottom: -1.7rem;
-                    margin-top: -1.7rem;
-                    padding: 0;
-                }
-
-                .copyright {
-                    @include text-site-info;
-
-                    display: inline;
-                    font-size: 1.1em;
-                    font-weight: 400;
-                    line-height: 1.18;
-                    margin-bottom: -0.3rem;
-                    margin-top: -0.2rem;
-                }
-            }
-        }
-
-        .navigationOverlay {
-            align-items: flex-end;
-            background-color: transparentize($color-theme, 0.8);
-            background-image: linear-gradient(140deg, $color-theme-gradient-end 20%, $color-theme-gradient-end);
-            bottom: 0;
-            height: 100%;
-            left: 0;
-            position: fixed;
-            right: 0;
-            top: 0;
-            width: 30%;
-            z-index: -2;
-        }
-    }
-
-    .content {
+    .contents {
         align-items: stretch;
         display: flex;
         flex-direction: column;
-        flex-shrink: 0;
-        justify-content: flex-start;
-        margin: 5.5rem;
-        margin-left: calc(5.5rem + 30%);
-        min-height: calc(100vh - 11rem);
-        min-width: calc(780px - 11rem);
-        width: calc(70% * 0.618 - 11rem);
+        margin-bottom: 0;
+        margin-left: calc(5.5rem + 30% + env(safe-area-inset-left));
+        margin-right: calc(5.5rem + env(safe-area-inset-right));
+        margin-top: 0;
+        min-width: calc(780px - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right));
+        width: calc(70% * 0.618 - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right));
 
         @media (max-width: 1440px) {
-            margin: 2.1rem;
-            margin-top: calc(2.1rem + 44px);
-            margin-bottom: 5.5rem;
+            margin-left: calc(2.1rem + env(safe-area-inset-left));
+            margin-right: calc(2.1rem + env(safe-area-inset-right));
+            margin-top: calc(44px + env(safe-area-inset-top));
             min-width: auto;
-            width: calc(100% - 2.1rem * 2);
+            width: calc(100% - 2.1rem * 2 - env(safe-area-inset-left) - env(safe-area-inset-right));
         }
 
-        .header {
-            width: 100%;
-        }
-
-        .main {
+        .section {
+            align-items: stretch;
             display: flex;
             flex-direction: column;
-            flex-grow: 1;
             flex-shrink: 0;
-            width: 100%;
-        }
-
-        .footer {
-            width: 100%;
-
-            .pageInfo {
-                @include container-column-stretch;
-
-                flex-shrink: 0;
-                margin-top: 5.5rem;
-
-                .pageInfoItem {
-                    @include container-column-stretch;
-
-                    color: $color-ui-footnote;
-                    margin-bottom: 0.8rem;
-
-                    &:last-child {
-                        margin-bottom: 0;
-                    }
-
-                    .pageInfoContent {
-                        display: inline;
-                        font-size: 1.1em;
-                        font-weight: 400;
-                        line-height: 1.18;
-                        margin-bottom: -0.3rem;
-                        margin-top: -0.2rem;
-                    }
-
-                    a {
-                        color: $color-ui-footnote;
-                        transition: color 0.3s ease-in-out;
-
-                        &:visited {
-                            color: $color-ui-footnote;
-                        }
-
-                        &:hover,
-                        &:visited:hover {
-                            color: $color-hover;
-                            transition: color 0.3s ease-in-out;
-                        }
-                    }
-                }
-            }
+            margin-bottom: 0;
+            margin-top: 0;
         }
     }
 }
