--- a/src/components/MorePosts.module.scss
+++ b/src/components/MorePosts.module.scss
@@ -3,9 +3,13 @@
 .morePosts {
     align-items: stretch;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin-bottom: 0;
     margin-top: 0;
+
+    @media (max-width: 1440px) {
+        flex-direction: column;
+    }
 
     .morePostItem {
         align-items: stretch;
