--- a/src/components/NavigationBar.module.scss
+++ b/src/components/NavigationBar.module.scss
@@ -5,37 +5,76 @@
     color: $color-ui-nav-headline-normal;
     display: flex;
     flex-direction: column;
-    text-align: end;
-    text-shadow: 0 2px 4px $color-ui-nav-headline-shadow;
+    text-align: right;
     text-transform: uppercase;
 
+    @media (max-width: 1440px) {
+        flex-direction: row;
+        text-align: left;
+    }
+
     .navigationList {
+        align-items: stretch;
+        display: flex;
+        flex-direction: column;
         list-style: none;
         margin: 0;
         padding: 0;
+
+        @media (max-width: 1440px) {
+            align-items: baseline;
+            flex-direction: row;
+        }
 
         .navigationListItem {
             display: flex;
             flex-direction: row-reverse;
             margin-bottom: 3.4rem;
 
+            @media (max-width: 1440px) {
+                flex-direction: row;
+                margin-bottom: 0;
+                margin-right: 1.3rem;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+
             &:last-child {
                 margin-bottom: 0;
             }
 
             .navigationItem {
+                align-items: baseline;
+                display: flex;
+                flex-direction: row;
                 font-size: 3em;
                 font-weight: 400;
                 line-height: 1.13;
                 margin-bottom: -0.4rem;
                 margin-top: -0.8rem;
+                text-shadow: 0 2px 4px $color-ui-nav-headline-shadow;
 
                 a::after {
+                    display: inline-block;
                     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
                     content: "";
                     height: 2.1rem;
                     margin-left: 2.1rem;
                     width: 0.3rem;
+                }
+
+                @media (max-width: 1440px) {
+                    font-size: 1.5em;
+                    line-height: 1;
+                    margin-bottom: 0;
+                    margin-top: 0;
+                    text-shadow: none;
+
+                    a::after {
+                        content: none;
+                    }
                 }
             }
         }
