--- a/src/templates/Page.module.scss
+++ b/src/templates/Page.module.scss
@@ -1,33 +1,45 @@
 @import '../styles/fonts';
 @import '../styles/colors';
 
-.header {
+.page {
     align-items: stretch;
     display: flex;
     flex-direction: column;
-    margin-bottom: 5.5rem;
+    margin-top: 5.5rem;
 
-    .metadata {
-        align-self: baseline;
-        display: flex;
-        flex-direction: row;
-        margin: 0;
+    @media (max-width: 1440px) {
         margin-top: 2.1rem;
     }
-}
 
-.main {
-    align-items: stretch;
-    color: $color-content-body;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 5.5rem;
+    .header {
+        align-items: stretch;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 5.5rem;
 
-    > :first-child {
-        margin-top: 0;
+        .metadata {
+            align-self: baseline;
+            display: flex;
+            flex-direction: row;
+            margin: 0;
+            margin-top: 2.1rem;
+        }
     }
 
-    > :last-child {
-        margin-bottom: 0;
+    .main {
+        align-items: stretch;
+        color: $color-content-body;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 5.5rem;
+
+        > :first-child {
+            margin-top: 0;
+        }
+
+        > :last-child {
+            margin-bottom: 0;
+        }
     }
+
 }
