--- a/src/components/License.module.scss
+++ b/src/components/License.module.scss
@@ -1,15 +1,36 @@
 @import '../styles/fonts';
 @import '../styles/colors';
 
-.image {
-    margin-right: 1.3rem;
-}
+.license {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
 
-.text {
-    color: $color-content-footer-text;
-    font-family: $font-text-monospaced;
-    font-size: 1.1em;
-    font-weight: 400;
-    line-height: 1.18;
-    text-transform: uppercase;
+    @media (max-width: 1440px) {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+
+    .image {
+        margin-right: 1.3rem;
+
+        @media (max-width: 1440px) {
+            order: 1;
+        }
+    }
+
+    .text {
+        color: $color-content-footer-text;
+        font-family: $font-text-monospaced;
+        font-size: 1.1em;
+        font-weight: 400;
+        line-height: 1.18;
+        text-transform: uppercase;
+
+        @media (max-width: 1440px) {
+            margin-bottom: 2.1rem;
+            order: 0;
+        }
+    }
+
 }
