Fixes flicking navigation items.

--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -92,6 +92,7 @@
                 @include container-row-center;
 
                 flex-grow: 1;
+                height: 44px;
                 max-width: calc(100% - 2.1em * 2);
                 opacity: 1;
                 -ms-overflow-style: none;
