--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -5,11 +5,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    min-height: 100vh;
 
     .contents {
         align-items: stretch;
         display: flex;
         flex-direction: column;
+        flex-grow: 1;
         margin-bottom: 0;
         margin-left: calc(5.5rem + 30% + env(safe-area-inset-left));
         margin-right: calc(5.5rem + env(safe-area-inset-right));
@@ -32,6 +34,10 @@
             flex-shrink: 0;
             margin-bottom: 0;
             margin-top: 0;
+
+            &:first-child {
+                flex-grow: 1;
+            }
         }
     }
 }
