--- a/src/templates/Index.module.scss
+++ b/src/templates/Index.module.scss
@@ -7,6 +7,7 @@
 .index {
     @include container;
 
+    flex-grow: 1;
     margin-top: 5.5rem;
 
     @media (max-width: 1440px) {
@@ -32,5 +33,4 @@
 
         margin-bottom: 5.5rem;
     }
-
 }
